modified security config